# SRTN_Schedulingalgorthmus

Scheduler_exe/: processes.txt
project/: CMakeLists.txt  bs_types.h  core.c  core.h  globals.h  log.c  log.h  main.c  processcontrol.c  processcontrol.h  scheduler.c  scheduler.h  simruntime.c  simruntime.h
project/Debug/: Scheduling.exe.recipe  Scheduling.vcxproj.FileListAbsolute.txt
project/x64/Debug/: Scheduling.exe.recipe  Scheduling.ilk  Scheduling.vcxproj.FileListAbsolute.txt  vc143.idb
project/x64/Debug/Scheduling.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Scheduling.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
